# world-cup-prediction-system

./: .dockerignore  .env.production.example  .gitignore  2026 年世界杯夺冠热门预测-86-20260613-0104.docx  AGENTS.md  Dockerfile  README.md  design-qa.md  docker-compose.tencent.yml  index.html  package-lock.json  package.json  pyproject.toml  wrangler.jsonc
backend/: access.py  admin.py  admin_audit.py  admin_security.py  daily_health.py  daily_update.py  data.py  data_import.py  event_review.py  fixture_update.py  io_utils.py  main.py  model.py  news_feed.py  news_ingest.py  payments.py  post_match_review.py  production_health.py  public_data_pipeline.py  score_feed.py  snapshot.py  squad_matchup.py  team_history.py  team_strength.py
docs/: feed-config.example.json  frontend-concept-notes.md  公开数据采集管线说明.md  前端界面设计记录.md  支付系统开发记录.md  新闻Feed导入说明.md  新闻抓取系统开发记录.md  日更流程说明.md  模拟引擎开发记录.md  管理员后台开发记录.md  腾讯云生产部署说明.md  赛事数据导入格式.md
scripts/: check_daily_update_health.py  check_production_readiness.py  deploy-cloudflare-api.sh  import_news_feed.py  import_team_match_history.py  import_tournament_data.py  review_news_item.py  run_daily_update.py  run_public_data_pipeline.py  simulate_payment_flows.py  update_prediction_snapshot.py  validate_prediction_data.py  write_model_quality_report.py
src/: App.tsx  styles.css
tests/: test_access.py  test_admin.py  test_admin_security.py  test_api.py  test_daily_update.py  test_data_import.py  test_data_validation.py  test_deployment.py  test_event_review.py  test_frontend_contract.py  test_history_model_pipeline.py  test_model.py  (+9 more)
(+33 files in other folders)
